language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.move:2:20 ───
   │
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
 3 │     resource struct R {}
   │     -------- The type's constraint information was determined here
   ·
 6 │         let x: CupC<R> = abort 0;
   │                ^^^^^^^ Constraint not satisfied.
   │                     - The resource type '0x8675309::M::R' does not satisfy the constraint 'copyable'
   │

