language/move-lang/tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    foo() {
        let x: CupC<R> = abort 0;
    }
}
